# silicon-starter

./: .bazelignore  .gitattributes  .gitignore  .sops.yaml  BUILD.bazel  INITIAL_SETUP.md  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  nogo.json
.github/workflows/: README.md  backend.yml  frontend.yml
authn/: BUILD.bazel  README.md  authn.go
authn/fireauth/: BUILD.bazel  fireauth.go  fireauth_test.go
authn/session/: BUILD.bazel  session.go  session_test.go
cmd/server/: BUILD.bazel  README.md  main.go
cmd/server/configs/: README.md  dev.conf  local.conf
cmd/server/configs/secrets/: README.md
cmd/server/graph/: BUILD.bazel  graph.go  graph_test.go  schema.graphqls  tasks.go  tasks_test.go  users.go  users_test.go
cmd/server/graph/graphconv/: BUILD.bazel  graphconv.go
cmd/server/graph/graphutil/: BUILD.bazel  graphutil.go
cmd/tools/migratesqldb/: BUILD.bazel  main.go
cmd/tools/migratesqldb/cmd/: BUILD.bazel  cmd.go
common/flagext/: BUILD.bazel
db/: BUILD.bazel  README.md  db.go
db/sqldb/: BUILD.bazel  sqldb.go  sqldb_test.go  task.go  task_test.go  user.go  user_test.go
db/sqldb/golden/: human_readable_schema.sql  schema_dump.sql
db/sqldb/golden/regen/humanreadableschema/: BUILD.bazel  humanreadableschema.go
db/sqldb/golden/regen/schemadump/: BUILD.bazel  schemadump.go
db/sqldb/migrations/: 0003_todo_table.down.sql  0003_todo_table.up.sql  migrations_test.go
frontend/: .eslintrc.json  .gitignore  .stylelintrc.json  README.md  app.vue  firebase.dev.json  nuxt.config.ts  package-lock.json  package.json
frontend/.jest/: jest.config.ts  nuxt-shims.ts  silence-some-warnings.ts  tsconfig.test.json
frontend/assets/scss/: _todo.scss  theme.scss
frontend/components/: TaskRow.vue
frontend/composables/: useAPI.ts  useSession.ts  useURLParams.ts
frontend/envs/: dev.env  local.env
frontend/graphql/: codegen.yml
frontend/graphql/operations/: tasks.graphql  user.graphql
frontend/layouts/: default.vue
frontend/lib/: colatz.test.ts  colatz.ts
frontend/lib/auth/: index.ts
frontend/lib/extratypes/: index.ts
frontend/lib/headers/: index.ts
frontend/lib/preconditions/: index.ts
frontend/middleware/: auth.global.ts
frontend/pages/: index.vue  sign-in.vue
frontend/plugins/: axios.ts  firebase.client.ts  firebase.server.ts  graphql.ts
frontend/public/: manifest.json
scripts/: BUILD.bazel  cloudsql_shell.sh  db_shell.sh  migrate_cloudsql.sh  run_backend.sh  run_db.sh
scripts/shared/: BUILD.bazel  bastion.sh  db_prompt.sh
secrets/: BUILD.bazel  secrets.go
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/auth/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/shared/: README.md  backend.tf  main.tf  outputs.tf  variables.tf
terraform/tfvars/: dev.tfvars  local.tfvars
testing/testdb/: BUILD.bazel  testdb.go
todo/: BUILD.bazel  todo.go
