load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fireauth",
    srcs = ["fireauth.go"],
    importpath = "github.com/Silicon-Ally/silicon-starter/authn/fireauth",
    visibility = ["//visibility:public"],
    deps = [
        "//authn",
        "@com_google_firebase_go_v4//auth",
    ],
)

go_test(
    name = "fireauth_test",
    srcs = ["fireauth_test.go"],
    embed = [":fireauth"],
    deps = [
        "//authn",
        "@com_github_google_go_cmp//cmp",
        "@com_google_firebase_go_v4//auth",
    ],
)
