sh_library(
    name = "kv",
    srcs = ["kv.sh"],
    visibility = ["//visibility:public"],
)

sh_library(
    name = "migrate",
    srcs = ["migrate.sh"],
    visibility = ["//visibility:public"],
)

sh_library(
    name = "bastion",
    srcs = ["bastion.sh"],
    visibility = ["//visibility:public"],
)

sh_library(
    name = "db_prompt",
    srcs = ["db_prompt.sh"],
    visibility = ["//visibility:public"],
)
