load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graphutil",
    srcs = ["graphutil.go"],
    importpath = "github.com/Silicon-Ally/silicon-starter/cmd/server/graph/graphutil",
    visibility = ["//visibility:public"],
    deps = ["@com_github_99designs_gqlgen//graphql"],
)
